--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     
     <title>Booking4U - حجز المواعيد</title>
+    
+    <!-- Environment Configuration -->
+    <script src="%PUBLIC_URL%/env-config.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
